--- a/OrchestrationServer/OrchestrationServer.csproj
+++ b/OrchestrationServer/OrchestrationServer.csproj
@@ -21,6 +21,12 @@
         <Protobuf Include="../Protos/service.proto" GrpcServices="Client" ProtoRoot="../Protos/">
             <Link>Protos/service.proto</Link>
         </Protobuf>
+      <Protobuf Include="../Protos/Platform.proto" GrpcServices="Client" ProtoRoot="../Protos/">
+        <Link>Protos/Platform.proto</Link>
+      </Protobuf>
+      <Protobuf Include="../Protos/scanwin.proto" GrpcServices="Client" ProtoRoot="../Protos/">
+        <Link>Protos/scanwin.proto</Link>
+      </Protobuf>
     </ItemGroup>
 
 </Project>
