--- a/RequestHandler/RequestHandler.csproj
+++ b/RequestHandler/RequestHandler.csproj
@@ -22,6 +22,9 @@
         <Protobuf Include="../Protos/service.proto" GrpcServices="Server" ProtoRoot="../Protos/">
             <Link>Protos/service.proto</Link>
         </Protobuf>
+      <Protobuf Include="../Protos/Platform.proto" GrpcServices="Server" ProtoRoot="../Protos/">
+        <Link>Protos/Platform.proto</Link>
+      </Protobuf>
     </ItemGroup>
     
 </Project>
