--- a/Requester/Requester.csproj
+++ b/Requester/Requester.csproj
@@ -12,6 +12,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="SteelCloud.Moonshot.Db" Version="1.3.11-alpha" />
     </ItemGroup>
 
     <ItemGroup>
@@ -21,6 +22,9 @@
         <Protobuf Include="../Protos/service.proto" GrpcServices="None" ProtoRoot="../Protos/">
             <Link>Protos/service.proto</Link>
         </Protobuf>
+      <Protobuf Include="../Protos/Platform.proto" GrpcServices="None" ProtoRoot="../Protos/">
+        <Link>Protos/Platform.proto</Link>
+      </Protobuf>
     </ItemGroup>
 
 </Project>
