--- a/PlatformHandler/PlatformHandler.csproj
+++ b/PlatformHandler/PlatformHandler.csproj
@@ -12,7 +12,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SteelCloud.CommonEnumerations" Version="1.0.4" />
+    <PackageReference Include="SteelCloud.Database" Version="1.1.0" />
     <PackageReference Include="SteelCloud.Moonshot.Db" Version="1.3.11-alpha" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
   </ItemGroup>
 
   <ItemGroup>
