--- a/Protos/Protos.csproj
+++ b/Protos/Protos.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="Database.proto" />
       <None Remove="Platform.proto" />
       <None Remove="registryentry.proto" />
       <None Remove="scanwin.proto" />
@@ -26,6 +27,11 @@
         <ProtoCompile>True</ProtoCompile>
         <CompileOutputs>True</CompileOutputs>
         <OutputDir>obj\Debug\net5.0\</OutputDir>
+        <Generator>MSBuild:Compile</Generator>
+      </Protobuf>
+      <Protobuf Include="Database.proto" Access="Public" GrpcServices="None" ProtoCompile="True">
+        <OutputDir>obj\Debug\net5.0\</OutputDir>
+        <CompileOutputs>True</CompileOutputs>
         <Generator>MSBuild:Compile</Generator>
       </Protobuf>
       <Protobuf Include="registryentry.proto" Access="Public" GrpcServices="None" ProtoCompile="True">
