--- a/Protos/Protos.csproj
+++ b/Protos/Protos.csproj
@@ -18,6 +18,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="SteelCloud.Moonshot.Db" Version="1.3.11-alpha" />
     </ItemGroup>
 
     <ItemGroup>
