--- a/RegistryEntryHandler/RegistryEntryHandler.csproj
+++ b/RegistryEntryHandler/RegistryEntryHandler.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.1.3" />
+    <PackageReference Include="SteelCloud.Moonshot.Db" Version="1.3.11-alpha" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +39,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="SteelCloud.CommonEnumerations">
+      <HintPath>..\..\SteelCloudUtilities\SteelCloud.CommonEnumerations\Build\Debug\netcoreapp3.1\SteelCloud.CommonEnumerations.dll</HintPath>
+    </Reference>
+    <Reference Include="SteelCloud.Windows.PowerShellEngine.Common">
+      <HintPath>..\..\SteelCloudUtilities\SteelCloud.Windows.PowerShellEngine.Common\Build\Debug\netcoreapp3.1\SteelCloud.Windows.PowerShellEngine.Common.dll</HintPath>
+    </Reference>
     <Reference Include="SteelCloud.Windows.PowerShellEngine.JobConfiguration">
       <HintPath>..\..\SteelCloudUtilities\SteelCloud.Windows.PowerShellEngine.JobConfiguration\bin\Debug\netcoreapp3.1\SteelCloud.Windows.PowerShellEngine.JobConfiguration.dll</HintPath>
     </Reference>
